# databricks-mcp-server

./: .env.example  README.md  project_structure.md  pyproject.toml
examples/: direct_usage.py
scripts/: show_clusters.py  show_notebooks.py
src/: __main__.py  main.py
src/api/: genie.py
src/cli/: commands.py
src/core/: auth.py  config.py  utils.py
src/server/: __main__.py  databricks_mcp_server.py
src/tools/: auth_flow.py  clusters.py  connectivity.py  dbfs.py  genie.py  jobs.py  notebooks.py  sql.py
tests/: test_auth_u2m.py  test_clusters.py  test_config.py  test_direct.py  test_genie.py  test_tools.py
