[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databricks-mcp-server"
version = "1.1.0"
description = "Multi-agent system for Databricks data analysis via MCP"
authors = [
    {name = "MCP Server Team", email = "example@example.com"}
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=3.2.0",
    "requests",
    "urllib3",
    "python-dotenv",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
cli = [
    "click",
]
dev = [
    "black",
    "pylint",
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
databricks-mcp = "src.server.databricks_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"] 

[tool.uv]
python-preference = "system"